--- a/mainapp/static/mainapp/main.css
+++ b/mainapp/static/mainapp/main.css
@@ -67,6 +67,14 @@ body {
   border: 2px solid black;
 }
 
+.box-bottom-left-open{
+  grid-area: newbottomleftopen;
+  background-color: #ffb3b3;
+  border: 2px solid black;
+  display: none;  
+
+}
+
 .box-left-open {
   grid-area: newleftopen;
   background-color: #cce5ff;
@@ -96,7 +104,7 @@ body {
               ". newtop newtop newtop ."
               "newleftopen newleft newcenter newright newrightopen"
               ". newbottom newbottom newbottom ."
-              ". newbottomopen newbottomopen newbottomopen newbottomrightopen";
+              "newbottomleftopen newbottomopen newbottomopen newbottomopen newbottomrightopen";
 }
 
 
@@ -243,7 +251,7 @@ a {
 
 
 
-.bottom-right-author, .bottom-right-abstract {
+.bottom-right-author, .bottom-right-abstract, .bottom-left-author, .bottom-left-info{
   display: none;
 }
 
@@ -266,15 +274,17 @@ a {
   cursor: pointer;
 }
 
-.image-active{
+.image-active.bottom-abstract-image{
   height: 20px;
   width: 20px;
-  -webkit-filter: contrast(75%); /* Safari 6.0 - 9.0 */
-  filter: contrast(75%);
+  filter: invert(100%);
 }
 
-
-
+.image-active.bottom-info-image{
+  height: 20px;
+  width: 20px;
+  filter: invert(0%);
+}
 
 /*The below is Corey Schafer's Youtube account */
 
