--- a/mainapp/static/mainapp/main.css
+++ b/mainapp/static/mainapp/main.css
@@ -39,6 +39,12 @@ body {
   display: none;  
 }
 
+.box-top-left-open{
+  grid-area: newtopleftopen;
+  background-color: #ffb3b3;
+  border: 2px solid black;
+  display: none;  
+}
 .box-bottom {
   grid-area: newbottom;
   background-color: #ffe6e6;
@@ -100,7 +106,7 @@ body {
   display: inline-grid;
   grid-template-columns: minmax(min-content, auto) minmax(22px, 35px) minmax(min-content, 250px) minmax(22px, 35px) minmax(min-content, 300px);
   grid-template-rows: auto;
-  grid-template-areas: ". newtopopen newtopopen newtopopen ."  
+  grid-template-areas: "newtopleftopen newtopopen newtopopen newtopopen newtoprightopen"  
               ". newtop newtop newtop ."
               "newleftopen newleft newcenter newright newrightopen"
               ". newbottom newbottom newbottom ."
@@ -120,7 +126,6 @@ body {
   display: flex;
   flex-flow: row wrap;
   background-color: red;
-
 }
 
 .test-flex-inner-container{
@@ -136,18 +141,6 @@ body {
 .test-info-class{
   display: none;
 }
-
-
-/*.box-right {
-  grid-area: right;
-  background-color: #e6f2ff;
-  padding-right: 1.25em; 
-  padding-top: 100%;
-  font-size: 0.7em;
-  display: flex;
-  flex-flow: column wrap;
-}*/
-
 
 
 
@@ -186,13 +179,13 @@ a {
   flex-flow: row wrap;
 }
 
-.nested-citations {
+.bottom-nested-citations, .top-nested-citations {
   font-size: 0.8em;
   flex: 1;
   padding: 5px;
 }
 
-.nested-citations:hover {
+.bottom-nested-citations:hover, .top-nested-citations:hover {
   font-size: 0.8em;
   flex: 1;
   padding: 5px;
@@ -201,16 +194,6 @@ a {
 
 
 
-
-.xbox-right {
-  grid-area: right;
-  background-color: yellow;
-  padding-right: 1.25em; 
-  padding-top: 100%;
-  font-size: 0.7em;
-  display: flex;
-  flex-flow: column wrap;
-}
 
 .flex-container-right { 
   display: flex;
@@ -251,40 +234,51 @@ a {
 
 
 
-.bottom-right-author, .bottom-right-abstract, .bottom-left-author, .bottom-left-info{
+.bottom-right-author, .bottom-right-abstract, .bottom-left-author, .bottom-left-info, .top-right-author, .top-right-abstract, .top-left-author, .top-left-info{
   display: none;
 }
 
-.info-image{
-  filter: invert(100%);
-}
 
-.bottom-info-image{
+.bottom-info-image, .top-info-image{
   float: left;
   padding-right: 3px;
   filter: invert(100%);
 }
 
-.bottom-abstract-image{
+.bottom-abstract-image, .top-abstract-image{
   float: right;
   padding-left: 1px;
 }
 
-.bottom-info-image:hover, .bottom-abstract-image:hover{
+.bottom-info-image:hover, .bottom-abstract-image:hover, .top-info-image:hover, .top-abstract-image:hover{
   cursor: pointer;
 }
 
-.image-active.bottom-abstract-image{
+.image-active.bottom-abstract-image, .image-active.top-abstract-image {
   height: 20px;
   width: 20px;
   filter: invert(100%);
 }
 
-.image-active.bottom-info-image{
+.image-active.bottom-info-image, .image-active.top-info-image{
   height: 20px;
   width: 20px;
   filter: invert(0%);
 }
+
+.center-info-image{
+  filter: invert(100%);
+}
+
+
+
+
+
+
+
+
+
+
 
 /*The below is Corey Schafer's Youtube account */
 
