--- a/mainapp/templates/mainapp/mainapp-home.html
+++ b/mainapp/templates/mainapp/mainapp-home.html
@@ -138,7 +138,7 @@ kant = publications.first()
 		<div class="grid-container">
 
 			<!-- The top part where the user clicks to get all the citations -->
-			<div class="box-top"> 
+			<div class="top-box"> 
 				<div class="logo-top-bottom">{% load static %}
 					<!-- Add media like this:  -->
 					{% load static %}
@@ -147,7 +147,7 @@ kant = publications.first()
 			</div>
 
 			<!-- Box top when open -->
-			<div class="box-top-open">
+			<div class="top-box-open">
 				<p class="open-header">
 					<!-- Publication author and year - same procedure as in the main box regarding author count-->
 					{{ publication.author.first.last_name }}
@@ -189,7 +189,7 @@ kant = publications.first()
 				
 
 			<!-- This is the box that opens on the top left to display the citation info when user clicks on image -->
-			<div class="box-top-left-open">
+			<div class="top-left-box-open">
 				{% for citer in publication.cited_pubs.all %}
 					<p id="topLeftAuthor{{ citer.id }}" class="top-left-author open-header">
 						<!-- Publication author and year - same procedure as in the main box regarding author count-->
@@ -236,7 +236,7 @@ kant = publications.first()
 			</div>
 
 			<!-- This is the box that opens on the top right to display the citation abstract when user clicks on image -->
-			<div class="box-top-right-open">
+			<div class="top-right-box-open">
 				{% for citer in publication.cited_pubs.all %}
 					<p id="topRightAuthor{{ citer.id }}" class="top-right-author open-header">
 						<!-- Publication author and year - same procedure as in the main box regarding author count-->
@@ -260,7 +260,7 @@ kant = publications.first()
 
 
 			<!-- The cnter box, where the main info of the citation appears -->	
-			<div class="box-center">
+			<div class="center-box">
 				 <span class="author"><a href="#">
 				 		<!-- Cite first author's last name -->
 						{{ publication.author.first.last_name }}</a>
@@ -287,7 +287,7 @@ kant = publications.first()
 			</div>
 			
 			<!-- The left box when open, where all the details of the publciation appear -->
-			<div class="box-left-open">
+			<div class="left-box-open">
 				<header class="open-header"> 
 				Details for {{ publication.author.first.last_name }}
 					{% if publication.author.all.count == 2 %}
@@ -324,18 +324,18 @@ kant = publications.first()
 			</div>
 
 			<!-- The left part where the user clicks to get all the publication details -->
-			<div class="box-left">
+			<div class="left-box">
 				{% load static %}
 				<img class="center-info-image" src="{% static "../media/site_pics/logos/Info logo.png" %}" alt="Details" height='20' width='20'>
 			</div>
 
 			<!-- The right part where the user clicks to get the Abstract -->
-			<div class="box-right">
+			<div class="right-box">
 				<img src="{% static "../media/site_pics/logos/Abstract logo.png" %}" alt="Abstract" height=20 width='20'>
 			</div>
 
 			<!-- The right box when open, where the Abstract appears -->
-			<article class="box-right-open">
+			<article class="right-box-open">
 				<!-- Creating a flexbox container, which will display all the citations from this publication -->
 				<header class="open-header">Abstract for
 				{{ publication.author.first.last_name }}
@@ -351,14 +351,14 @@ kant = publications.first()
 
 
 			<!-- The bottom part where the user clicks to get the citations -->
-			<div class="box-bottom">
+			<div class="bottom-box">
 				<div class="logo-top-bottom">{% load static %}
 					<img src="{% static "../media/site_pics/logos/quotes2.png" %}" alt="Logo" height='20' width='20'>
 				</div>
 			</div>
 
 			<!-- The top part where the user clicks to get all the citations -->
-			<div class="box-bottom-open">
+			<div class="bottom-box-open">
 				<p class="open-header">
 					<!-- Publication author and year - same procedure as in the main box regarding author count-->
 					{{ publication.author.first.last_name }}
@@ -399,7 +399,7 @@ kant = publications.first()
 				
 
 			<!-- This is the box that opens on the bottom left to display the citation info when user clicks on image -->
-			<div class="box-bottom-left-open">
+			<div class="bottom-left-box-open">
 				{% for cited in publication.citer_pubs.all %}
 					<p id="bottomLeftAuthor{{ cited.id }}" class="bottom-left-author open-header">
 						<!-- Publication author and year - same procedure as in the main box regarding author count-->
@@ -447,7 +447,7 @@ kant = publications.first()
 
 
 			<!-- This is the box that opens on the bottom right to display the citation abstract when user clicks on image -->
-			<div class="box-bottom-right-open">
+			<div class="bottom-right-box-open">
 				{% for cited in publication.citer_pubs.all %}
 					<p id="bottomRightAuthor{{ cited.id }}" class="bottom-right-author open-header">
 						<!-- Publication author and year - same procedure as in the main box regarding author count-->
